<!--
  ~ Copyright(c) 2018 Bob Shen <ayst.shen@foxmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ayst.stresstest.test.wifi.WifiTestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery_test_intro"
            android:textColor="@color/black_70" />

        <CheckBox
            android:id="@+id/chbox_erase_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_test_format_sdcard" />

        <CheckBox
            android:id="@+id/chbox_wipe_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_test_wipe_all" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/edt_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:minWidth="50dp"
                android:text="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery_test_count_down"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_30"
        android:gravity="center"
        android:text="5"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:visibility="gone" />

</FrameLayout>
