<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ayst.stresstest.test.WifiTestFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reboot_test_intro"
            android:textColor="@color/black_70" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <CheckBox
                android:id="@+id/chbox_sdcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/reboot_test_check_sdcard" />

            <TextView
                android:id="@+id/tv_sd_state"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="FAIL"
                android:textColor="@color/red" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <CheckBox
                android:id="@+id/chbox_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reboot_test_check_wifi" />

            <TextView
                android:id="@+id/tv_wifi_state"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="FAIL"
                android:textColor="@color/red"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/edt_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:text="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reboot_test_count_down"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_countdown"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_30"
        android:gravity="center"
        android:text="5"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"/>

</FrameLayout>
