<!--
  ~ Copyright(c) 2018 Bob Shen <ayst.shen@foxmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ayst.stresstest.test.WifiTestFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_70"
            android:text="@string/sleep_test_intro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_test_wakeup_duration"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edt_wakeup_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:text="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sec"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_test_sleep_duration"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edt_sleep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:text="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sec"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_time"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_30"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_sleep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="12:30:59"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_wakeup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="12:35:59"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>
